--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Ahshah eats</title>
+  <title>A Dance With Finance</title>
   
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="" name="keywords">
@@ -217,7 +217,7 @@
         </h2>
 
       <p>
-        Every day i set out to make the world a more equitable and inclusive place. The primary way i do this is by improving acsess to financial education and products for people who have been systemically excluded.  
+        Every day i set out to make the world a more equitable and inclusive world. The primary way i do this is by improving acsess to financial education and products for people who have been systemically excluded.  
       </p>
     </div>
 
